<resources>
    <string name="app_name">Machinosensei</string>
    <string name="getLocationPermission">位置情報の取得に同意します</string>
    <string name="slide_app_start_button_title">位置情報の取得に同意します</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">ホーム画面</string>
    <string name="menu_my_page">Myページ</string>
    <string name="menu_message">メッセージ</string>
    <string name="menu_setting">設定</string>

    <string name="mypage_comment_1">※すべてのサービスを利用するためにはログインが必要です。</string>
    <string name="botton_login">ログイン</string>
    <string name="botton_account_registration">アカウント登録</string>

    <string name="spinner_title">言語を選択してください。</string>
    <string-array name="language_select">
        <item>全ての言語</item>
        <item>日本語</item>
        <item>英語</item>
        <item>韓国語</item>
        <item>中国語</item>
        <item>スペイン語</item>
        <item>フランス語</item>
        <item>ロシア語</item>
        <item>ドイツ語</item>
        <item>イタリア語</item>
        <item>ヒンディー語</item>
        <item>ポルトガル語</item>
        <item>アラビア語</item>
        <item>ベトナム語</item>
        <item>フィリピン語</item>
    </string-array>


</resources>