<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lee.machinosensei.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_page"
        android:name="com.lee.machinosensei.fragment.MyPageFragment"
        android:label="@string/menu_my_page"
        tools:layout="@layout/fragment_mypage" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.lee.machinosensei.fragment.MessageFragment"
        android:label="@string/menu_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.lee.machinosensei.fragment.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>